painchamp, player Class.

--- a/Asteroids/Asteroids/Asteroids.vcxproj
+++ b/Asteroids/Asteroids/Asteroids.vcxproj
@@ -130,11 +130,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Player.cpp" />
+    <ClCompile Include="src\Livingentity.cpp" />
+    <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\Gamehandler.cpp" />
     <ClCompile Include="src\Renderwindow.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Player.h" />
+    <ClInclude Include="src\Livingentity.h" />
+    <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\Gamehandler.h" />
     <ClInclude Include="src\Renderwindow.h" />
   </ItemGroup>
