--- a/Asteroids/Asteroids/Asteroids.vcxproj
+++ b/Asteroids/Asteroids/Asteroids.vcxproj
@@ -130,6 +130,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Asteroid.cpp" />
     <ClCompile Include="src\Bullet.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Livingentity.cpp" />
@@ -139,6 +140,7 @@
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Asteroid.h" />
     <ClInclude Include="src\Bullet.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Livingentity.h" />
